--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.3",
+    "react-navigation-drawer": "^2.4.7",
     "react-navigation-stack": "^2.3.6"
   },
   "devDependencies": {
