--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.3",
     "react-navigation-drawer": "^2.4.7",
-    "react-navigation-stack": "^2.3.6"
+    "react-navigation-stack": "^2.3.6",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
